--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,145 @@ a {
     margin-left: 8px;
 }
 
+.site-header__popup-wrapper {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 500;
+    background: linear-gradient(to bottom, rgba(39, 39, 39, 0.7), rgba(68, 68, 68, 0.7));
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.site-header__popup-wrapper-active {
+    display: flex;
+    animation: growDown 300ms ease-in-out forwards;
+}
+
+.site-header__popup-main {
+    position: relative;
+    padding: 25px;
+    background-color: #fff;
+    border-radius: 8px;
+}
+
+.popup-close::before {
+    position: absolute;
+    bottom: -20px;
+    right: -60px;
+    z-index: 5;
+    content: "Yopish";
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 500;
+    color: #fff;
+    display: none;
+}
+
+.popup-close {
+    position: absolute;
+    top: -30px;
+    right: -30px;
+    background: transparent;
+    border: none;
+    box-sizing: border-box;
+    cursor: pointer;
+    transition: all 0.3 ease;
+}
+
+.popup-close:hover {
+    transform: scale(1.1);
+}
+
+.popup-close:hover::before {
+    display: block;
+}
+
+.popup-close i {
+    color: #ff0000;
+    font-size: 34px;
+    transition: all 0.3s ease;
+}
+
+.popup-close:hover i {
+    color: #fff;
+}
+
+.popup-header img {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 15px;
+}
+
+.popup-header__title {
+    color:#272727;
+    font-weight: 500;
+    text-align: center;
+}
+
+.popup-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.popup-form input:not([type="submit"]) {
+    width: 300px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #272727;
+    border-radius: 4px;
+    outline: none;
+}
+
+.popup-form input:not([type="submit"])::placeholder {
+    color: #272727;
+    opacity: 0.6;
+    font-size: 12px;
+    letter-spacing: 0.4px;
+}
+
+.popup-form input:not([type="submit"]):focus {
+    border-color: #6b9fed;
+    box-shadow: #6b9fed 0px 3px 10px 1px;
+}
+
+.popup-form__title {
+    color: #272727;
+    display: block;
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+.popup-form input[type="submit"] {
+    width: 120px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    background-color: #6b9fed;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 14px;
+    line-height: 1.5;
+    font-weight: 600;
+    letter-spacing: 0.4px;
+    display: block;
+    margin-top: 15px;
+}
+
+.popup-form input[type="submit"]:hover {
+    background-color: transparent;
+    border-color: #6b9fed;
+    color: #6b9fed;
+}
+
 .site-nav__container {
     padding: 20px 0px;
     display: flex;
@@ -411,6 +550,18 @@ a {
     }
     100% {
         transform: scaleY(1)
+    }
+}
+
+@keyframes unGrowDown {
+    0% {
+        transform: scaleY(1)
+    }
+    80% {
+        transform: scaleY(1.1)
+    }
+    100% {
+        transform: scaleY(0)
     }
 }
 
