--- a/css/style.css
+++ b/css/style.css
@@ -499,6 +499,10 @@ a {
     z-index: 15;
 }
 
+.dropdown-item:not(:last-child) {
+    border-bottom: 1px solid rgba(48, 63, 149,0.2);
+}
+
 .dropdown-link {
     display: flex;
     align-items: center;
@@ -679,16 +683,26 @@ a {
 
 .news {
     padding-top: 65px;
-    padding-bottom: 110px;
+    padding-bottom: 180px;
 }
 
 
-.news__title {
+.section__title {
     font-size: 36px;
     line-height: 1;
     font-weight: 600;
     color: #303F95;
     margin-bottom: 80px;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+.section__title::after {
+    width: 100%;
+    height: 2px;
+    margin-top: 10px;
+    content: "";
+    background-color: rgb(189, 21, 21);
 }
 
 .news__list {
@@ -842,6 +856,7 @@ a {
     line-height: 22px;
     font-weight: 400;
     color: #272727;
+    text-align: justify;
 }
 
 .news-card__back-link {
@@ -873,3 +888,98 @@ a {
 
 
 
+/* MAIN DIRECTIONS  */
+
+.main-directions {
+    padding-top: 80px;
+    padding-bottom: 200px;
+}
+
+.main-directions__list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    grid-row-gap: 70px;
+    grid-column-gap: 90px;
+}
+
+.main-directions__link {
+    max-width: 280px;
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 15px;
+    transition: all 0.3s ease;
+}
+
+.main-directions__link:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 80px;
+}
+
+.mian-derection__image-wrapper {
+    width: 150px;
+    height: 100px;
+    margin-bottom: 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 35px;
+}
+
+.main-direction__title {
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 600;
+    color: #303F95;
+    transition: all 0.3s ease;
+}
+
+.main-directions__link:hover .main-direction__title{
+    opacity: 0.7;
+}
+
+
+.directions-title{
+    font-size: 36px;
+    line-height: 43px;
+    font-weight: 600;
+    color: #303F95;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+}
+
+.title-wrapper {
+    padding: 25px 0;
+    margin-bottom: 40px;
+    box-shadow: rgb(48 63 149 / 30%) 0px 2px 8px 0px;
+}
+
+.img-wrapper {
+    width: 900px;
+    height: 500px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-definitaion {
+    font-size: 18px;
+    line-height: 1.5;
+    font-weight: 600;
+    color: rgb(189, 21, 21);
+}
+
+.directions-text {
+    max-width: 1100px;
+    margin: 0 auto;
+    margin-bottom: 100px;
+    padding: 0 20px;
+    text-align: justify;
+}
+
+.directions-text .news-card__back-link {
+    display: block;
+    margin-top: 50px;
+}
