--- a/css/style.css
+++ b/css/style.css
@@ -922,7 +922,7 @@ a {
     width: 150px;
     height: 100px;
     margin-bottom: 20px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 35px;
+    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 35px; */
 }
 
 .main-direction__title {
@@ -949,7 +949,7 @@ a {
 
 .title-wrapper {
     padding: 25px 0;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     box-shadow: rgb(48 63 149 / 30%) 0px 2px 8px 0px;
 }
 
@@ -957,8 +957,8 @@ a {
     width: 900px;
     height: 500px;
     margin: 0 auto;
-    margin-bottom: 40px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+    margin-bottom: 80px;
+    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px; */
     display: flex;
     align-items: center;
     justify-content: center;
