--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,21 @@
         overflow: hidden !important;
     }
 
+    .body-active {
+        overflow: hidden;
+    }
+
+    .body-active::before {
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "";
+        background-color: rgba(0,0,0,0.4);
+    }
+
     .container {
         max-width: 90%;
     }
@@ -45,12 +60,12 @@
     .site-nav {
         display: none;
         width: 380px;
-        height: 100vh;
+        height: 150vh;
         position: absolute;
         top: 0;
         left: 0;
         background-color: #fff;
-        z-index: 25;
+        z-index: 110;
         color: #303F95;
         animation: growDown 300ms ease-in-out forwards;
     }
