--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,6 +28,7 @@
         background-color: #fff;
         position: fixed !important;
         top: 0;
+        right: 0;
     }
 
     .site-header__top {
