--- a/css/responsive.css
+++ b/css/responsive.css
@@ -202,8 +202,7 @@
     }
 
     .links__item a {
-        padding: 0;
-        height: 250px;
+        padding: 40px 30px;
     }
 
     .slick-prev {
