--- a/css/style.css
+++ b/css/style.css
@@ -1275,3 +1275,107 @@ h1 {
 }
 
 /* END OF ESENTIAL LINKS  */
+
+
+
+/* START FOOTER  */
+
+.site-footer {
+    padding-top: 100px;
+    padding-bottom: 120px;
+    background-color: #24242C;
+}
+
+.site-footer__container {
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+}
+
+.connection-info__link {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.connection-info__link span {
+    width: 210px;
+    font-size: 16px;
+    line-height: 1.5;
+    margin-left: 10px;
+    color: #fff;
+}
+
+.footer-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.footer-item:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.footer-link {
+    width: 250px !important;
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    line-height: 1.3;
+    font-weight: 400;
+}
+
+
+.connection-info .footer-link i {
+    font-size: 20px !important;
+    margin-right: 10px !important;
+}
+
+.footer__section-title {
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 700;
+    margin-bottom: 40px;
+    color: #fff;
+}
+
+.footer-link i {
+    font-size: 11px;
+    margin-right: 5px;
+}
+
+.footer-link {
+    font-size: 14px;
+    line-height: 1.5;
+    font-weight: 500;
+    transition: all 0.3s ease;
+    color: #fff;
+}
+
+.footer-link:hover {
+    opacity: 0.7;
+}
+
+.footer__connect form {
+    display: flex;
+    align-items: center;
+}
+
+.footer__connect input {
+    padding: 7.5px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    outline: none;
+    border: none;
+}
+
+.footer__connect button {
+    width: 30px;
+    height: 30px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border: none;
+    cursor: pointer;
+}
+
+/* END OF FOOTER  */
